--- a/_dev/css/components/header.scss
+++ b/_dev/css/components/header.scss
@@ -37,8 +37,8 @@
   }
 
   .header-nav {
-/*    max-height: 50px;
-    border-bottom: $gray-light 2px solid;*/
+    /*    max-height: 50px;
+        border-bottom: $gray-light 2px solid;*/
     height: 71px;
     #menu-icon {
       margin: 0 1rem;
@@ -54,6 +54,10 @@
       display: flex;
       flex-wrap: nowrap;
       justify-content: flex-end;
+      position: absolute;
+      top: 50%;
+      transform: translateY(-50%);
+      right: 0;
     }
 
     .currency-selector {
