--- a/_dev/css/components/newsletter.scss
+++ b/_dev/css/components/newsletter.scss
@@ -4,7 +4,7 @@
   width: 100%;
   max-width: 50rem;
   margin: auto;
-  margin-bottom: 0.625rem;
+  /*margin-bottom: 0.625rem;*/
   clear: both;
   font-size: $font-size-sm;
   background: $white;
@@ -16,10 +16,13 @@
   }
 
   form {
-    .input-wrapper {
-      overflow: hidden;
-    }
+    display:flex;
+    flex-direction:row;
+    height: 36px;
+    border:1px solid grey;
+    padding:2px;
 
+    /*
     .row {
       .col-xs-12:last-of-type {
         p {
@@ -34,22 +37,29 @@
         }
       }
     }
+    */
 
     input[type="email"] {
-      width: 100%;
-      padding: 11px;
-      border: 1px solid $border-gray;
+      width: 80%;
+      border: 1px solid grey;
+      flex-grow:2;
+      border:none;
 
       &:focus {
-        padding: 8px 8px 9px;
-        border: 3px $brand-primary solid;
-        outline: 0;
+        outline: 0px;
       }
     }
 
     input {
-      height: 42px;
       box-shadow: none;
+    }
+
+    input[type="submit"] {
+      /*border:1px solid blue;*/
+      background: black;
+      color:white;
+      height: 30px;
+      width: 30px;
     }
   }
 }
