Apply new changes for mobile menu to Records store

--- a/_dev/css/components/header.scss
+++ b/_dev/css/components/header.scss
@@ -58,96 +58,102 @@
       top: 50%;
       transform: translateY(-50%);
       right: 0;
-    }
-
-    .currency-selector {
-      margin-top: 0.9375rem;
-      margin-left: 0.9375rem;
-      white-space: nowrap;
-    }
-
-    .user-info {
-      margin-top: 0.9375rem;
-      margin-left: 2.5rem;
-      text-align: right;
-      white-space: nowrap;
-
-      .account {
-        margin-left: $small-space;
+      .social-links {
+        position: absolute;
+        top: 50%;
+        transform: translateY(-50%);
+        right: 0;
       }
     }
 
-    .language-selector {
-      margin-top: 0.9375rem;
-      white-space: nowrap;
-    }
-
-    .cart-preview {
-      &.active {
-        background: $brand-primary;
-
-        a,
-        i {
-          color: $white;
+    /*    .currency-selector {
+          margin-top: 0.9375rem;
+          margin-left: 0.9375rem;
+          white-space: nowrap;
         }
-      }
 
-      .shopping-cart {
-        color: $gray;
-        vertical-align: middle;
-      }
+        .user-info {
+          margin-top: 0.9375rem;
+          margin-left: 2.5rem;
+          text-align: right;
+          white-space: nowrap;
 
-      .body {
-        display: none;
-      }
-    }
-
-    .blockcart {
-      height: 3rem;
-      padding: 0.75rem;
-      margin-left: 0.9375rem;
-      text-align: center;
-      white-space: nowrap;
-      background: $gray-light;
-
-      a {
-        color: $gray;
-
-        &:hover {
-          color: $brand-primary;
+          .account {
+            margin-left: $small-space;
+          }
         }
-      }
 
-      &.active {
-        a:hover {
-          color: $white;
+        .language-selector {
+          margin-top: 0.9375rem;
+          white-space: nowrap;
         }
-      }
 
-      .header {
-        margin-top: 0.125rem;
-      }
-    }
+        .cart-preview {
+          &.active {
+            background: $brand-primary;
 
-    #_desktop_contact_link {
-      display: inline-block;
+            a,
+            i {
+              color: $white;
+            }
+          }
 
-      #contact-link {
-        margin-top: 0.9375rem;
-      }
-    }
+          .shopping-cart {
+            color: $gray;
+            vertical-align: middle;
+          }
 
-    .search-widget {
-      margin-top: 0.2rem;
-    }
+          .body {
+            display: none;
+          }
+        }
 
-    .material-icons {
-      line-height: inherit;
+        .blockcart {
+          height: 3rem;
+          padding: 0.75rem;
+          margin-left: 0.9375rem;
+          text-align: center;
+          white-space: nowrap;
+          background: $gray-light;
 
-      &.expand-more {
-        margin-left: -0.375rem;
-      }
-    }
+          a {
+            color: $gray;
+
+            &:hover {
+              color: $brand-primary;
+            }
+          }
+
+          &.active {
+            a:hover {
+              color: $white;
+            }
+          }
+
+          .header {
+            margin-top: 0.125rem;
+          }
+        }
+
+        #_desktop_contact_link {
+          display: inline-block;
+
+          #contact-link {
+            margin-top: 0.9375rem;
+          }
+        }
+
+        .search-widget {
+          margin-top: 0.2rem;
+        }
+
+        .material-icons {
+          line-height: inherit;
+
+          &.expand-more {
+            margin-left: -0.375rem;
+          }
+        }*/
   }
 
   .header-top {
