many major changes : add svg instead of png + restrucutre for mobile + icon open close

--- a/_dev/css/components/newsletter.scss
+++ b/_dev/css/components/newsletter.scss
@@ -22,26 +22,9 @@
     border:1px solid grey;
     padding:2px;
 
-    /*
-    .row {
-      .col-xs-12:last-of-type {
-        p {
-          font-size: 0.75rem;
-          color: $gray;
-        }
-      }
-
-      .col-xs-12:first-of-type {
-        .btn-primary:first-of-type {
-          margin-left: 0.5rem;
-        }
-      }
-    }
-    */
-
     input[type="email"] {
       width: 80%;
-      border: 1px solid grey;
+      border: 1px solid $border-gray;
       flex-grow:2;
       border:none;
 
@@ -60,6 +43,24 @@
       color:white;
       height: 30px;
       width: 30px;
+    }
+  }
+
+  .alert {
+    font-size: 0.6rem;
+    margin-bottom: 0;
+    border-radius: 0;
+    padding: 0;
+
+    &.alert-danger{
+      color: #a94442;
+      border: none;
+      background-color: transparent;
+    }
+    &.alert-success{
+      color: #3c763d;
+      border: none;
+      background-color: transparent;
     }
   }
 }
