--- a/_dev/css/components/footer.scss
+++ b/_dev/css/components/footer.scss
@@ -1,26 +1,15 @@
 #footer {
-  padding-top: 2.5rem;
-}
+  background-color: #4E4E4E;
+  color: white;
 
-.block-contact {
-  font-size: 0.875rem;
-  color: $gray;
-
-  .block-contact-title {
-    color: $gray-darker;
+  .logo, .logo-social {
+    filter: brightness(0) invert(1);
   }
-
-  .navbar-toggler .material-icons {
-    color: $gray-darker;
-  }
-
-  @include media-breakpoint-down(sm) {
-    #contact-infos {
-      padding: 0.625rem;
-      padding-top: 0;
-    }
+  .logo {
+    max-width: 150px;
   }
 }
+
 
 .linklist {
   .blockcms-title a {
@@ -44,155 +33,27 @@
   font-weight: 700;
 }
 
-.block-social {
-  text-align: right;
-
-  ul {
-    display: flex;
-
-    @include media-breakpoint-down(sm) {
-      flex-flow: wrap;
-    }
-
-    li {
-      display: inline-block;
-      width: 2.5rem;
-      height: 2.5rem;
-      margin: 0.125rem;
-      cursor: pointer;
-      background-color: $gray-light;
-      background-repeat: no-repeat;
-
-      @include media-breakpoint-down(sm) {
-        width: 2rem;
-        height: 2rem;
-        margin-right: 1.3rem;
-        margin-bottom: 1.3rem;
-        background-size: contain;
-      }
-
-      &:hover {
-        background-color: $brand-primary;
-      }
-
-      a {
-        display: block;
-        height: 100%;
-        overflow: hidden;
-        text-indent: 100%;
-        white-space: nowrap;
-
-        &:hover {
-          color: transparent;
-        }
-      }
-    }
-  }
-}
-
-.facebook {
-  background-image: url("../img/facebook.svg");
-
-  &::before {
-    content: "";
-    background-image: url("../img/facebook-blue.svg");
-  }
-
-  &.icon-gray {
-    background-image: url("../img/facebook-gray.svg");
-
-    &:hover {
-      background-image: url("../img/facebook-blue.svg");
-    }
-  }
-}
-
-.twitter {
-  background-image: url("../img/twitter.svg");
-
-  &::before {
-    content: "";
-    background-image: url("../img/twitter-blue.svg");
-  }
-
-  &.icon-gray {
-    background-image: url("../img/twitter-gray.svg");
-
-    &:hover {
-      background-image: url("../img/twitter-blue.svg");
-    }
-  }
-}
-
-.linkedin {
-  background-image: url("../img/linkedin.svg");
-  background-position: center center;
-}
-
-.rss {
-  background-image: url("../img/rss.svg");
-}
-
-.youtube {
-  background-image: url("../img/youtube.svg");
-}
-
-.googleplus {
-  background-image: url("../img/gplus.svg");
-
-  &::before {
-    content: "";
-    background-image: url("../img/gplus-blue.svg");
-  }
-
-  &.icon-gray {
-    background-image: url("../img/gplus-gray.svg");
-
-    &:hover {
-      background-image: url("../img/gplus-blue.svg");
-    }
-  }
-}
-
-#block_myaccount_infos {
-  .myaccount-title a {
-    color: $gray-darker;
-  }
-}
-
-.pinterest {
-  background-image: url("../img/pinterest.svg");
-
-  &::before {
-    content: "";
-    background-image: url("../img/pinterest-blue.svg");
-  }
-
-  &.icon-gray {
-    background-image: url("../img/pinterest-gray.svg");
-
-    &:hover {
-      background-image: url("../img/pinterest-blue.svg");
-    }
-  }
-}
-
-.vimeo {
-  background-image: url("../img/vimeo.svg");
-}
-
-.instagram {
-  background-image: url("../img/instagram.svg");
-}
-
 .footer-container {
   padding-top: $extra-large-space;
   overflow: hidden;
 
-  .h3,
-  .h4 {
-    margin-bottom: 1rem;
-    font-size: 1rem;
+  .footer-blocks {
+    .footer-block-links {
+      border-bottom: none;
+    }
+    .footer-block-content {
+      margin-top: 30px;
+    }
+  }
+
+  .wrapper {
+    /* stylelint-disable */
+    padding-right: 0 !important;
+    padding-left: 0 !important;
+    padding-top: 10px;
+    margin-top: 30px;
+    margin-bottom: 30px;
+    /* stylelint-enable */
   }
 
   li {
@@ -201,103 +62,83 @@
 
   li a {
     font-size: $font-size-sm;
-    color: $gray;
+    color: white;
     cursor: pointer;
 
     &:hover {
       color: $brand-primary;
     }
   }
-}
 
-.links {
-  .collapse {
-    display: inherit;
-  }
-}
+  .links {
+    ul {
+      margin-bottom: 0;
+      > li {
+        font-weight: 600;
 
-@include media-breakpoint-down(sm) {
-  .block_newsletter {
-    padding-bottom: 0.625rem;
-    border-bottom: 1px solid $gray-lighter;
-  }
-
-  .footer-container {
-    margin-top: 0;
-    box-shadow: none;
-
-    .wrapper {
-      /* stylelint-disable */
-      padding-right: 0 !important;
-      padding-left: 0 !important;
-      /* stylelint-enable */
-    }
-
-    .links {
-      .h3 {
-        font-size: 1rem;
-        line-height: 1.5;
-      }
-
-      ul {
-        margin-bottom: 0;
-        background-color: $gray-lighter;
-
-        > li {
-          padding: 0.625rem;
-          font-weight: 600;
-          border-bottom: 1px solid $white;
-
-          a {
-            color: $gray-darker;
-          }
+        a {
+          color: white;
         }
       }
     }
   }
-
-  .links {
-    .collapse {
-      display: none;
-
-      &.in {
-        display: block;
+}
+@include media-breakpoint-down(lg) {
+  .footer-container {
+    .footer-blocks {
+      border-bottom: 1px solid white;
+      .footer-block-links {
+        border-bottom: none;
       }
-    }
-
-    .title {
-      padding: 0.625rem;
-      cursor: pointer;
-      border-bottom: 1px solid $gray-lighter;
-
-      .collapse-icons .remove {
-        display: none;
-      }
-    }
-
-    .title[aria-expanded="true"] .collapse-icons {
-      .add {
-        display: none;
-      }
-
-      .remove {
-        display: block;
-      }
-    }
-
-    .navbar-toggler {
-      display: inline-block;
-      padding: 0;
     }
   }
 }
 
 @include media-breakpoint-down(md) {
-  .block-social {
-    text-align: center;
+  .footer-container {
+    .footer-blocks {
+      border-bottom: 1px solid white;
+      .footer-block-links {
+        border-bottom: none;
+      }
+    }
+    .footer-main {
+      .footer-newsletter-social {
+        padding-top: 30px;
+        padding-bottom: 30px;
+      }
+      .social-links{
+        padding-top: 6px;
+        padding-bottom: 20px;
+      }
+    }
   }
+}
 
-  .block-contact {
-    padding-left: 1.5rem;
+@include media-breakpoint-down(sm) {
+  .footer-container {
+    margin-top: 0;
+    box-shadow: none;
+    padding-top: 0;
+
+    .footer-blocks {
+      .footer-block-links {
+        border-bottom: none;
+      }
+      .footer-block-logo {
+        padding-top: 2.5rem;
+      }
+    }
+  }
+}
+
+@include media-breakpoint-down(xs) {
+  .footer-container {
+    .footer-blocks {
+      border-bottom: none;
+      .footer-block-links {
+        border-bottom: 1px solid white;
+      }
+    }
   }
 }
