--- a/_dev/css/components/newsletter.scss
+++ b/_dev/css/components/newsletter.scss
@@ -12,7 +12,7 @@
   #block-newsletter-label {
     font-size: 1.3125rem;
     line-height: 1.75rem;
-    color: $gray-darker;
+    color: grey;
   }
 
   form {
@@ -24,7 +24,7 @@
 
     input[type="email"] {
       width: 80%;
-      border: 1px solid $border-gray;
+      border: 1px solid grey;
       flex-grow:2;
       border:none;
 
@@ -66,7 +66,14 @@
 }
 
 #footer {
+  label {
+    color: white;
+  }
   .block_newsletter {
+    form {
+      border: 1px solid white;
+    }
+
     p {
       padding-top: $small-space;
     }
@@ -77,12 +84,6 @@
   }
 }
 
-#left-column {
-  .block_newsletter {
-    padding: 1.563rem 1.25rem;
-    margin-bottom: 1.563rem;
-  }
-}
 
 @include media-breakpoint-down(sm) {
   .block_newsletter {
