fix records homepage scss + some structure

--- a/_dev/css/components/homepage/homepage-header.scss
+++ b/_dev/css/components/homepage/homepage-header.scss
@@ -6,10 +6,10 @@
     align-items: center;
     justify-content: center;
   }
-
+  .intro-left {
     background: #FF5500;
     font-family: 'Glenmorangie Serif';
-    color: white;
+    color: black;
     .intro-title {
       left: 32px;
       top: calc(50% - 640px/2 - 1089.5px);
