--- a/_dev/css/components/homepage/homepage.scss
+++ b/_dev/css/components/homepage/homepage.scss
@@ -44,6 +44,7 @@
 
       figure {
         margin: 0;
+        min-height: inherit;
 
         img {
           width: 100%;
@@ -58,34 +59,40 @@
 }
 
 @include media-breakpoint-up(md) {
-  .wrapper {
-    display: flex;
-    .intro-left, .intro-right {
-      width: 50%;
-      min-height: calc(100vh - 71px);
-    }
+  #intro-records {
+    .wrapper {
+      display: flex;
 
-    .intro-left {
-      .intro-title {
-        line-height: 45px;
-        margin-bottom: 30px;
-        margin-left: 30px;
-        width: 70%;
-        text-align: left;
+      .intro-left, .intro-right {
+        width: 50%;
+        min-height: calc(100vh - 71px);
       }
-      .intro-description{
-        margin-bottom: 30px;
-        margin-left: 30px;
-        width: 70%;
-        text-align: left;
+
+      .intro-left {
+        .intro-title {
+          line-height: 45px;
+          margin-bottom: 30px;
+          margin-left: 30px;
+          width: 70%;
+          text-align: left;
+        }
+
+        .intro-description {
+          margin-bottom: 30px;
+          margin-left: 30px;
+          width: 70%;
+          text-align: left;
+        }
       }
-    }
-    .intro-right {
-      figure {
-        margin: 0;
-        img {
-          height: calc(100vh - 71px);
-          width: inherit;
+
+      .intro-right {
+        figure {
+          margin: 0;
+
+          img {
+            height: calc(100vh - 71px);
+            width: inherit;
+          }
         }
       }
     }
