--- a/_dev/css/components/homepage/homepage.scss
+++ b/_dev/css/components/homepage/homepage.scss
@@ -1,6 +1,7 @@
 
 #intro-records {
   .wrapper {
+    font-family: GlenmorangieSerif-Regular;
     .intro-left, .intro-right {
       width: 100%;
       position: relative;
@@ -11,30 +12,32 @@
 
     .intro-left {
       background: #FF5500;
-      font-family: 'Glenmorangie Serif';
       color: black;
-
-      .intro-title {
-        left: 32px;
-        top: calc(50% - 640px / 2 - 1089.5px);
-        font-style: normal;
-        font-weight: 400;
-        font-size: 40px;
-        line-height: 45px;
-        width: 80%;
-        text-align: center;
-        margin: 30px auto;
+      min-height: 460px;
+      .intro-title-desc {
+        position: absolute;
+        top: 45%;
+        transform: translateY(-50%);
+        .intro-title {
+          font-style: normal;
+          font-weight: 400;
+          font-size: 40px;
+          line-height: 45px;
+          text-align: center;
+          margin: auto 50px;
+        }
+        .intro-description {
+          font-style: normal;
+          font-weight: 400;
+          font-size: 14px;
+          line-height: 14px;
+          margin: auto 50px;
+          width: 80%;
+          text-align: center;
+        }
       }
 
-      .intro-description {
-        font-style: normal;
-        font-weight: 400;
-        font-size: 14px;
-        line-height: 14px;
-        margin: 30px auto;
-        width: 80%;
-        text-align: center;
-      }
+
     }
 
     .intro-right {
@@ -69,22 +72,27 @@
       }
 
       .intro-left {
-        .intro-title {
-          line-height: 45px;
-          margin-bottom: 30px;
-          margin-left: 30px;
-          width: 70%;
-          text-align: left;
-        }
+        position: relative;
 
-        .intro-description {
-          margin-bottom: 30px;
-          margin-left: 30px;
-          width: 70%;
-          text-align: left;
+        .intro-title-desc {
+          transform: translateY(-50%);
+
+          .intro-title {
+            line-height: 45px;
+            margin-bottom: 30px;
+            margin-left: 30px;
+            width: 70%;
+            text-align: left;
+          }
+
+          .intro-description {
+            margin-bottom: 30px;
+            margin-left: 30px;
+            width: 70%;
+            text-align: left;
+          }
         }
       }
-
       .intro-right {
         figure {
           margin: 0;
