many major/minor chnages

--- a/_dev/css/components/homepage/homepage.scss
+++ b/_dev/css/components/homepage/homepage.scss
@@ -27,6 +27,7 @@
           margin: auto 50px;
         }
         .intro-description {
+          font-family: POLICESTUDIOHARKSANS-REGULAR;
           font-style: normal;
           font-weight: 400;
           font-size: 14px;
@@ -86,6 +87,7 @@
           }
 
           .intro-description {
+
             margin-bottom: 30px;
             margin-left: 30px;
             width: 70%;
