--- a/_dev/css/components/homepage/homepage.scss
+++ b/_dev/css/components/homepage/homepage.scss
@@ -37,8 +37,6 @@
           text-align: center;
         }
       }
-
-
     }
 
     .intro-right {
@@ -57,9 +55,34 @@
     }
   }
 }
+
 #events-records {
   min-height: 80vh;
   color: black;
+  .records-events {
+    ul {
+      margin-top: 80px;
+      margin-bottom: 80px;
+      li {
+        margin-top: 20px;
+        margin-bottom: 20px;
+        border-bottom: 1px solid black;
+        padding-bottom: 20px;
+        span.event-date {
+          margin-right: 30px;
+          font-family: GlenmorangieSerif-Regular;
+          font-size: 14px;
+        }
+        span.event-title {
+          font-size: 14px;
+        }
+        &.events-title {
+          text-transform: uppercase;
+          font-size: 18px;
+        }
+      }
+    }
+  }
 }
 
 @include media-breakpoint-up(md) {
