--- a/_dev/css/components/newsletter.scss
+++ b/_dev/css/components/newsletter.scss
@@ -11,7 +11,7 @@
   #block-newsletter-label {
     font-size: 1.3125rem;
     line-height: 1.75rem;
-    color: $gray-darker;
+    color: grey;
   }
 
   form {
@@ -26,7 +26,7 @@
     }
     input[type="email"] {
       width: 80%;
-      border: 1px solid $border-gray;
+      border: 1px solid grey;
       flex-grow:2;
       border:none;
 
@@ -59,14 +59,14 @@
     margin-bottom: 0;
     border-radius: 0;
     padding: 0;
-
+    position: absolute;;
     &.alert-danger{
-      color: #a94442;
+      color: black;
       border: none;
       background-color: transparent;
     }
     &.alert-success{
-      color: #3c763d;
+      color: black;
       border: none;
       background-color: transparent;
     }
