mods in theme global

--- a/_dev/css/components/homepage/homepage.scss
+++ b/_dev/css/components/homepage/homepage.scss
@@ -72,6 +72,8 @@
           margin-right: 30px;
           font-family: GlenmorangieSerif-Regular;
           font-size: 14px;
+          min-width: 80px;
+          display: inline-block;
         }
         span.event-title {
           font-size: 14px;
