--- a/_dev/css/components/footer.scss
+++ b/_dev/css/components/footer.scss
@@ -9,13 +9,11 @@
   }
 }
 
-
 .linklist {
   .blockcms-title a {
     color: $gray-darker;
   }
 }
-
 .account-list a {
   color: $gray;
 
@@ -31,16 +29,37 @@
   .footer-blocks {
     .footer-block {
       &.repair {
-        .logo {
-          height: 23px;
-        }
+        .footer-block-logo {
+          min-height: 16px;
+          .footer-logo {
 
+            position: absolute;
+            height: 23px;
+            width: 102px;
+            .logo {
+              height: 23px;
+            }
+          }
+        }
+        .footer-block-links {
+          .links {
+            margin-top: 30px;
+          }
+        }
       }
       &.records {
-        .logo {
-          height: 26px;
+        .footer-block-logo {
+          min-height: 16px;
+          .footer-logo {
+            position: absolute;
+            height: 26px;
+            .logo {
+              height: 26px;
+            }
+          }
         }
       }
+
       padding-top: 2px;
       .footer-block-links {
         border-bottom: none;
@@ -64,10 +83,11 @@
     }
     .footer-main-links {
       .links{
-        margin-top: 74px;
+        margin-top: 78px;
       }
     }
   }
+
   .wrapper {
     /* stylelint-disable */
     padding-right: 0 !important;
