--- a/_dev/css/components/footer.scss
+++ b/_dev/css/components/footer.scss
@@ -5,7 +5,7 @@
   font-size: 11px;
   line-height: 15px;
   .logo, .logo-social {
-    filter: brightness(0) invert(1);
+      filter: brightness(0) invert(1);
   }
 }
 
@@ -25,14 +25,14 @@
 .footer-container {
   padding-top: $extra-large-space;
   overflow: hidden;
-
+  padding-bottom: 50px;
   .footer-blocks {
     .footer-block {
+      padding-top: 2px;
       &.repair {
         .footer-block-logo {
           min-height: 16px;
           .footer-logo {
-
             position: absolute;
             height: 23px;
             width: 102px;
@@ -45,24 +45,28 @@
           .links {
             margin-top: 30px;
           }
+          .contact {
+            margin-top: 31px;
+          }
         }
       }
       &.records {
         .footer-block-logo {
           min-height: 16px;
-          .footer-logo {
-            position: absolute;
-            height: 26px;
-            .logo {
+            .footer-logo {
+              position: absolute;
               height: 26px;
+              .logo {
+                height: 26px;
+              }
             }
+        }
+        .footer-block-links {
+          border-bottom: none;
+          .contact {
+            margin-top: 31px;
           }
         }
-      }
-
-      padding-top: 2px;
-      .footer-block-links {
-        border-bottom: none;
       }
       .footer-block-content {
         margin-top: 30px;
