--- a/_dev/css/components/homepage/homepage.scss
+++ b/_dev/css/components/homepage/homepage.scss
@@ -32,8 +32,7 @@
           font-weight: 400;
           font-size: 13px;
           line-height: 20px;
-          margin: auto 50px;
-          width: 80%;
+          margin: 30px 50px;
           text-align: center;
         }
       }
