--- a/_dev/css/components/newsletter.scss
+++ b/_dev/css/components/newsletter.scss
@@ -31,6 +31,7 @@
       flex-grow:2;
       border:none;
       color: black;
+      font-size: 13px;
       &:focus {
         outline: 0px;
       }
